@@ -1,5 +1,11 @@
 2017-07-29  Jay Berkenbilt  <ejb@ql.org>
 
+	* Add --newline-before-endstream command-line option and
+	setNewlineBeforeEndstream method to QPDFWriter. This forces qpdf
+	to always add a newline before the endstream keyword. It is a
+	necessary but not sufficient condition for PDF/A compliance. Fixes
+	#103.
+
 	* Handle zlib data errors when decoding streams. Fixes #106.
 
 	* Improve handling of files where the "stream" keyword is not
